--- a/react/package.json
+++ b/react/package.json
@@ -12,6 +12,7 @@
     "kafkajs": "^1.15.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-push-notification": "^1.3.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
     "web-vitals": "^2.1.2"
